--- a/_amsf/_app/index.html
+++ b/_amsf/_app/index.html
@@ -14,7 +14,7 @@ permalink: /
       Chowraid
     </h2>
 
-    <small>a.k.a. amsf, version 0.0.15</small>
+    <small>a.k.a. Alexander Vega</small>
   </header>
 
   <ul class=list>
