--- a/_amsf/_app/page-about.html
+++ b/_amsf/_app/page-about.html
@@ -7,15 +7,12 @@ desc: 關於・について・Introduction
 
 <p>This is an example About page.</p>
 
-<p>Sparanoid is a one-man design studio operated by Tunghsiao Liu, currently located in China. You can ping me on <a href="http://twitter.com/tunghsiao">Twitter</a> or send correspondence to <a href="mailto:{{ site.profile.email }}">{{ site.profile.email }}</a>.</p>
+<p>Chowraid also know irl as Alex is a front end web developer.  You can ping me on <a href="http://twitter.com/chowraid">Twitter</a>.</p>
 
 <h3>Colophon</h3>
 
 <p>
-  <a href="http://jekyllrb.com/">Jekyll</a> (<a href="http://github.com/sparanoid/sparanoid.com">Source</a>) -
-  <a href="http://github.com/">GitHub</a> -
-  <a href="http://aws.amazon.com/cloudfront/">CloudFront</a> -
-  <a href="http://macromates.com/">Textmate</a>
+  <a href="http://github.com/chowraid">GitHub</a> -
 </p>
 
-<p>All posts are &copy; Tunghsiao Liu, all rights reserved. The views expressed on this site are mine alone and not those of my employers and clients, past and present.</p>
+<p>All posts are &copy; Alexnader Vega, all rights reserved. The views expressed on this site are mine alone and not those of my employers and clients, past and present.</p>
