--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ sitemap:
 ---
 
 <h2 class="go-home">
-    I suggest you <a href="/">going home</a>, it's 404 and it's getting dark!
+    Where do you think you are going! <a href="/">Head back.</a>!
 </h2>
 
 
