--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class='no-js layout-landing' lang='en'>
   <head>
     <meta charset='utf-8'>
-    <title>Alander Vega</title>
+    <title>Alexander Vega</title>
     <meta content='Alander Vega' property='og:title'>
     <meta content='Alander Vega' property='twitter:title'>
     <link rel="canonical" href="http://chowraid.xyz/">
@@ -27,7 +27,7 @@
             <i class='ion-social-github-outline'></i>
           </a>
           <a href="https://notes.chowraid.xyz">
-            <i class='ion-icon-journal'></i>
+            <i class='ion-android-book'></i>
           </a>
         </div>
         <div class='post-list'>
