--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <p>I am an open-source contributor. I like making and braking things that is pretty much it.</p>
         <div class='links'>
           <a href="https://twitter.com/chowraid">
-            <i class='ion-social-twitter-outline'></i>
+            <i class='ion-social-twitter'></i>
           </a>
           <a href="https://github.com/chowraid">
-            <i class='ion-social-github-outline'></i>
+            <i class='ion-social-github'></i>
           </a>
           <a href="https://notes.chowraid.xyz">
             <i class='ion-android-book'></i>
